--- a/src/app/Component/rectangle/rectangle.component.html
+++ b/src/app/Component/rectangle/rectangle.component.html
@@ -2,9 +2,9 @@
 <br>
 <div class="menu">
     <div>
-        <input class="form-control-sm" (ngModelChange)="onChange()" [(ngModel)]="A" type="number" min="1">
+        <input class="form-control-sm" (change)="onChange()" [(ngModel)]="A" type="number" min="1">
         <label>cm</label>
-        <input class="form-control-sm" (ngModelChange)="onChange()" [(ngModel)]="B" type="number" min="1">
+        <input class="form-control-sm" (change)="onChange()" [(ngModel)]="B" type="number" min="1">
         <label>cm</label>
         <br>
         <Label>Area: {{area}}</Label>
